robo_orchard/lab/0.4.0/_sources/autoapi/robo_orchard_lab/dataset/robot/row_sampler/index.rst.txt
row_sampler
===========

.. py:module:: robo_orchard_lab.dataset.robot.row_sampler


Classes
-------

.. autoapisummary::

   robo_orchard_lab.dataset.robot.row_sampler.MultiRowSampler
   robo_orchard_lab.dataset.robot.row_sampler.MultiRowSamplerConfig
   robo_orchard_lab.dataset.robot.row_sampler.DeltaTimestampSampler
   robo_orchard_lab.dataset.robot.row_sampler.DeltaTimestampSamplerConfig
   robo_orchard_lab.dataset.robot.row_sampler.ColumnIndexOffsetSampler
   robo_orchard_lab.dataset.robot.row_sampler.ColumnIndexOffsetSamplerConfig
   robo_orchard_lab.dataset.robot.row_sampler.CustomizedColumnIndexSampler
   robo_orchard_lab.dataset.robot.row_sampler.CustomizedColumnIndexSamplerConfig


Module Contents
---------------

.. py:class:: MultiRowSampler

   Bases: :py:obj:`robo_orchard_core.utils.config.ClassInitFromConfigMixin`


   Class for sampling multiple rows of specific columns from a dataset.


   .. py:method:: sample_row_idx(index_dataset: datasets.Dataset | CachedIndexDataset, index: int) -> dict[str, list[int | None]]
      :abstractmethod:


      Sample a list of row indices from the index dataset.

      .. note::

         This method should be implemented by subclasses to define
         the specific sampling strategy, based on the provided index.

      :param index_dataset: The dataset from which to sample rows.
      :type index_dataset: HFDataset
      :param index: The index or indices to sample.
      :type index: int

      :returns: A dictionary where keys are column
                names and values are lists of row indices.
      :rtype: dict[str, list[int | None]]



   .. py:method:: sample_row_idx_batch(index_dataset: datasets.Dataset | CachedIndexDataset, index_batch: Sequence[int]) -> dict[str, list[list[int | None]]]

      Sample a batch of row indices from the index dataset.

      This method is a batch version of `sample_row_idx`, which
      processes multiple indices at once.

      .. note::

         The implementation provided here is a simple loop over
         `sample_row_idx`. Subclasses may override this method
         for more efficient batch processing.

      :param index_dataset: The dataset from which to sample rows.
      :type index_dataset: HFDataset
      :param index_batch: A sequence of indices to sample.
      :type index_batch: Sequence[int]

      :returns: A dictionary where keys are
                column names and values are lists of lists of row indices.
      :rtype: dict[str, list[list[int | None]]]



   .. py:property:: column_rows_keys
      :type: dict[str, Any]

      :abstractmethod:


      Get the keys of the rows that are sampled.

      This property is expected to return a dictionary where keys are
      column names and values are the corresponding configuration or
      parameters used for sampling rows from that column.
      It is useful for understanding which columns are sampled and what
      are the sampling strategies or parameters associated with each column.


.. py:class:: MultiRowSamplerConfig

   Bases: :py:obj:`robo_orchard_core.utils.config.ClassConfig`\ [\ :py:obj:`MultiRowSamplerType`\ ]


   Configuration class for MultiRowSampler.


   .. py:attribute:: class_type
      :type:  Type[MultiRowSamplerType]


.. py:class:: DeltaTimestampSampler(cfg: DeltaTimestampSamplerConfig)

   Bases: :py:obj:`MultiRowSampler`


   Sampler that samples rows based on delta timestamps.

   This sampler selects rows from the dataset episode based on specified
   delta timestamps for each column and a tolerance value.


   .. py:attribute:: cfg


   .. py:property:: column_rows_keys
      :type: dict[str, list[float]]


      Get the keys of the rows that are sampled.


   .. py:method:: sample_row_idx(index_dataset: datasets.Dataset | CachedIndexDataset, index: int) -> dict[str, list[int | None]]

      Sample a list of row indices from the index dataset.

      .. note::

         This method should be implemented by subclasses to define
         the specific sampling strategy, based on the provided index.

      :param index_dataset: The dataset from which to sample rows.
      :type index_dataset: HFDataset
      :param index: The index or indices to sample.
      :type index: int

      :returns: A dictionary where keys are column
                names and values are lists of row indices.
      :rtype: dict[str, list[int | None]]



.. py:class:: DeltaTimestampSamplerConfig

   Bases: :py:obj:`MultiRowSamplerConfig`\ [\ :py:obj:`DeltaTimestampSampler`\ ]


   Configuration class for DeltaTimestampSampler.

   This configuration define the sampling strategy based on delta timestamps
   for each column. It allows specifying the delta timestamps and the
   tolerance for matching timestamps.



   .. py:attribute:: class_type
      :type:  robo_orchard_core.utils.config.ClassType[DeltaTimestampSampler]


   .. py:attribute:: column_delta_ts
      :type:  dict[str, list[float]]

      A dictionary where keys are column names and values are lists of
      delta timestamps in seconds. This is used to sample rows based on
      the delta timestamps for each column.


   .. py:attribute:: tolerance
      :type:  float
      :value: 0.01


      The tolerance in seconds for matching timestamps.

      The first row that matches the delta_timestamp +/- tolerance will be
      selected. This is useful for ensuring that the sampled rows are close
      to the desired delta timestamps, allowing for some flexibility in
      matching due to potential variations in the data.


.. py:class:: ColumnIndexOffsetSampler(cfg: ColumnIndexOffsetSamplerConfig)

   Bases: :py:obj:`MultiRowSampler`


   Sampler that samples rows based on column index offsets.

   This sampler selects rows from the dataset based on specified
   index offsets for each column in the same episode.

   .. rubric:: Example

   For example, if the current index is 10, and the column_offsets
   is {"camera": [-1, 0, 1]}, then the sampler will return the indices
   [9, 10, 11] for the "camera" column, provided that these indices
   belong to the same episode as index 10. If any of these indices
   do not belong to the same episode, None will be returned for that
   position.


   .. py:attribute:: cfg
      :type:  ColumnIndexOffsetSamplerConfig


   .. py:property:: column_rows_keys
      :type: dict[str, list[int | None]]


      Get the keys of the rows that are sampled.


   .. py:method:: sample_row_idx(index_dataset: datasets.Dataset | CachedIndexDataset, index: int) -> dict[str, list[int | None]]

      Sample a list of row indices from the index dataset.

      .. note::

         This method should be implemented by subclasses to define
         the specific sampling strategy, based on the provided index.

      :param index_dataset: The dataset from which to sample rows.
      :type index_dataset: HFDataset
      :param index: The index or indices to sample.
      :type index: int

      :returns: A dictionary where keys are column
                names and values are lists of row indices.
      :rtype: dict[str, list[int | None]]



   .. py:method:: sample_row_idx_by_offsets(index_dataset: datasets.Dataset, index: int, column_offsets: dict[str, list[int | None]], force_in_episode: bool) -> dict[str, list[int | None]]
      :staticmethod:


      Sample row indices based on column index offsets.

      :param index_dataset: The dataset from which to sample rows.
      :type index_dataset: HFDataset
      :param index: The index to sample from.
      :type index: int
      :param column_offsets: A dictionary where
                             keys are column names and values are lists of index offsets.
      :type column_offsets: dict[str, list[int|None]]
      :param force_in_episode: Whether to force the sampled rows to be
                               in the same episode as the current index.
      :type force_in_episode: bool

      :returns:

                A dictionary where keys are column
                    names and values are lists of row indices.
      :rtype: dict[str, list[int | None]]



.. py:class:: ColumnIndexOffsetSamplerConfig

   Bases: :py:obj:`MultiRowSamplerConfig`\ [\ :py:obj:`ColumnIndexOffsetSampler`\ ]


   Configuration class for ColumnIndexOffsetSampler.


   .. py:attribute:: class_type
      :type:  robo_orchard_core.utils.config.ClassType[ColumnIndexOffsetSampler]


   .. py:attribute:: column_offsets
      :type:  dict[str, list[int | None]]

      A dictionary where keys are column names and values are lists of
      index offsets. This is used to sample rows based on index offsets
      for each column.


   .. py:attribute:: force_in_episode
      :type:  bool
      :value: True


      Whether to force the sampled rows to be in the same episode
      as the current index.


.. py:class:: CustomizedColumnIndexSampler(cfg: CustomizedColumnIndexSamplerConfig)

   Bases: :py:obj:`MultiRowSampler`


   Sampler that samples rows based on customized column index list.

   This sampler selects rows from the dataset based on specified
   index lists for each column in the same episode.


   User should inherit this class and implement the method
   `_sample_column_offsets` to define how to sample the column offsets
   for each index.



   .. py:attribute:: cfg
      :type:  CustomizedColumnIndexSamplerConfig


   .. py:property:: column_rows_keys
      :type: dict[str, None]


      Get the keys of the rows that are sampled.


   .. py:method:: sample_row_idx(index_dataset: datasets.Dataset | CachedIndexDataset, index: int) -> dict[str, list[int | None]]

      Sample a list of row indices from the index dataset.

      .. note::

         This method should be implemented by subclasses to define
         the specific sampling strategy, based on the provided index.

      :param index_dataset: The dataset from which to sample rows.
      :type index_dataset: HFDataset
      :param index: The index or indices to sample.
      :type index: int

      :returns: A dictionary where keys are column
                names and values are lists of row indices.
      :rtype: dict[str, list[int | None]]



.. py:class:: CustomizedColumnIndexSamplerConfig

   Bases: :py:obj:`MultiRowSamplerConfig`\ [\ :py:obj:`CustomizedColumnIndexSampler`\ ]


   .. py:attribute:: class_type
      :type:  robo_orchard_core.utils.config.ClassType[CustomizedColumnIndexSampler]


   .. py:attribute:: columns
      :type:  list[str]

      The list of columns to sample from.


